Add required star to email

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -73,6 +73,10 @@
 		font-size: 0.9rem;
 		font-weight: _font(weight-bold);
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
+
+		span.required {
+			color: red;
+		}
 	}
 
 	input[type="text"],
